--- a/cropper/src/main/res/layout/crop_image_view.xml
+++ b/cropper/src/main/res/layout/crop_image_view.xml
@@ -21,6 +21,7 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_gravity="center"
+        android:indeterminateTint="#5127F5"
         android:theme="@style/progressBarStyle"/>
 
 </merge>
